[workspace]
resolver = "2"
members = [
  "interface",
  "program",
]

[workspace.package]
authors = ["imduchuyyy <imduchuyyy@gmail.com>"]
repository = "https://github.com/imduchuyyy/p-amm"
license = "Apache-2.0"
edition = "2021"

[workspace.metadata.cli]
solana = "2.3.4"

# Specify Rust toolchains for rustfmt, clippy, and build.
# Any unprovided toolchains default to stable.
[workspace.metadata.toolchains]
format = "nightly-2025-02-16"
lint = "nightly-2025-02-16"

[workspace.metadata.spellcheck]
config = "scripts/spellcheck.toml"

[workspace.metadata.release]
pre-release-commit-message = "Publish {{crate_name}} v{{version}}"
tag-message = "Publish {{crate_name}} v{{version}}"
consolidate-commits = false